language_map/priv/static/css/main.css
/* ... */
.form__title {
  font-weight: var(--font-weight-normal);
  border-bottom: 1px solid var(--dark-border-color);
  padding-bottom: ;
  padding: 1rem 1rem 0.75rem;
}

.form__fieldset {
  border: none;
  padding: 0;
  margin-bottom: 1rem;
}

.form__fieldset div {
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

.form__label {
  padding: 0 0.25rem 0.35rem 0;
}

.form__select {
  appearance: none;
  -webkit-appearance: none;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  outline: 0;
  box-shadow: none;
  border: 0 !important;
  color: white;
  background: #3e414b url(../img/select-image.svg) center right 6px / 0.5rem no-repeat padding-box;
  font-size: var(--font-size-normal);
  padding: 0.35rem 1.25rem 0.35rem 0.35rem;
  position: relative;
  display: block;
  overflow: hidden;
  border-radius: 2px;
  max-width: 300px;
}

.form__select:focus {
  box-shadow: var(--focus);
}

#age-filters div {
  flex-direction: row;
  align-items: baseline;
}

#age-filters .form__label {
  font-size: var(--font-size-small);
}

#age-filters .form__select {
  margin-right: 0.25rem;
}

#legend {
  background-color: #fff;
  position: absolute;
  left: 10px;
  bottom: 10px;
  border: 1px solid var(--light-border-color);
  border-radius: var(--border-radius);
  box-shadow: 0px 2px 28px -2px rgba(0,0,0,0.4);
  display: none;
}

.legend__header {
  display: flex;
  border-bottom: 1px solid var(--light-border-color);
  align-items: center;
  justify-content: space-between;
  padding: 1rem 1rem 0.75rem;
}

.legend__close {
  font-size: var(--font-size-large);
  margin-left: 2rem;
  background: #eaeaed;
  padding: 0.7rem 0.3rem 0.45rem;
  border-radius: 1rem;
  line-height: 0;
  cursor: pointer;
}

.legend__title {
  font-size: var(--font-size-normal);
  font-weight: var(--font-weight-normal);
}

#legend-items {
  margin-bottom: 0;
  list-style-type: none;
  padding: 0rem 1rem 1rem;
}

.legend__item {
  font-size: var(--font-size-small);
  padding-bottom: 0.5rem;
  display: flex;
  align-items: center;
}

.legend__item:last-child {
  padding-bottom: 0;
}

.color-box {
  display: inline-block;
  height: 17px;
  width: 17px;
  border: 1px solid white;
  box-shadow: 0 0 0 1px var(--colorbox-border-color);
  border-radius: 1px;
  margin-right: 0.5rem;
}

#links {
  display: inline-block;
  margin-top: 5px;
}

#filter_toggle_container {
  color: #73788c;
  padding: 0.75rem 1rem 1rem;
  display: flex;
  justify-content: space-between;
  background: var(--filter-footer-background);
  box-shadow: inset 0 7px 9px -7px var(--filter-footer-shadow);
  display: none;
}

.filter_toggle {
  width: 100%;
  text-align: right;
  display: inline-block;
  margin-top: 3px;
}

.filter_toggle img {
  width: 1rem;
  padding-right: 0.15rem;
  margin-bottom: -4px;
}

#show_filters {
  display: none;
}

#legend_toggle_container {
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 10px 10px 15px;
  margin: 0;
}

#legend_toggle_container img {
  width: 1.25rem;
  padding-right: 0.15rem;
  margin-bottom: -5px;
  position: relative;
}

#filter_toggle {
  float: right;
}

#show_legend {
  display: none;
  box-shadow: 0px 2px 28px -2px rgba(0,0,0,0.4);
}

#extra_filters {
  display: none;
}
#show_filters {
  display: block;
}
#hide_filters {
  display: none;
}

.jquery-modal.current {
  z-index: 999;
}

.modal__title {
  padding-bottom: 0.75rem;
  font-weight: var(--font-weight-normal);
  border-bottom: 1px solid var(--light-border-color);
}

.area-name {
  font-weight: bold;
  white-space: pre-wrap;
}

.leaflet-tooltip {
  min-width: 200px;
}

@media (max-width: 1024px) {
  #title {
    text-align: center;
    font-size: 18px;
  }
  #filters {
    top: 0;
    left: 0;
    width: 100%;
    box-sizing: border-box;
    border-radius: 0;
  }
  #legend {
    left: 0;
    bottom: 0;
    width: 100%;
    box-sizing: border-box;
    display: none;
    border-radius: 0;
    z-index: 3;
  }
  #show_legend {
    display: block;
  }
  #toggle-content {
    position: absolute;
    top: 22px;
    right: 40px;
  }
  #toggle-content span, #toggle-content span:before, #toggle-content span:after {
    cursor: pointer;
    border-radius: 1px;
    height: 3px;
    width: 25px;
    background: white;
    position: absolute;
    display: block;
    content: '';
  }
  #toggle-content span:before {
    top: -6px;
  }
  #toggle-content span:after {
    bottom: -6px;
  }
  #toggle-content span, #toggle-content span:before, #toggle-content span:after {
    transition: all 500ms ease-in-out;
  }
  #toggle-content.active span {
    background-color: transparent;
  }
  #toggle-content.active span:before, #toggle-content.active span:after {
    top: 0;
  }
  #toggle-content.active span:before {
    transform: rotate(45deg);
  }
  #toggle-content.active span:after {
    transform: rotate(-45deg);
  }
}

@media (max-width: 360px) {
  #title {
    text-align: left;
  }
}


/* CSS spinner */
.loader {
  z-index: 9999;
  font-size: 25px;
  width: 1em;
  height: 1em;
  border-radius: 50%;
  position: relative;
  text-indent: -9999em;
  -webkit-animation: load5 1.1s infinite ease;
  animation: load5 1.1s infinite ease;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}
/* ... */

